# fem_rs

./: Cargo.toml  LICENSE  NOTES.md  PLAN.md  README.md
assets/: disc.geo  disc.msh  lshape.geo  lshape.msh  plate_hole.geo  plate_hole.msh
examples/: poisson_1d.rs  poisson_msh.rs
src/: assembly.rs  assembly_2d.rs  bc.rs  elasticity_2d.rs  element.rs  element_2d.rs  gmsh.rs  lib.rs  main.rs  mesh.rs  mesh_2d.rs  solve.rs  viewer.rs  viz_2d.rs
tests/: elasticity.rs  gmsh_parser.rs  poisson_1d.rs  poisson_2d.rs
