[package]
name = "fem_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
nalgebra = "0.34"
nalgebra-sparse = "0.11"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "point_series"] }
anyhow = "1"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"

[dev-dependencies]
approx = "0.5"
